src/JWKS-Server/docker/envoy/envoy.yaml
node:
  cluster: poc

admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: http
      address:
        socket_address: { address: 0.0.0.0, port_value: 8000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: local_service }
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak_user:
                          issuer: http://192.168.1.11:8000/
                          remote_jwks:
                            http_uri:
                              uri: http://192.168.1.11:8080/.well-known/jwks.json
                              cluster: keycloak
                              timeout: 1s
                            cache_duration:
                              seconds: 30
                          forward: false
                          forward_payload_header: x-jwt-payload
                      rules:
                        - match:
                            prefix: /
                          requires:
                            provider_name: keycloak_user
                      bypass_cors_preflight: true
                  #- name: envoy.filters.http.rbac 
                  #  typed_config:
                  #    "@type": type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC       
                  #    rules: 
                  #      action: ALLOW
                  #      policies:
                  #        "allow-sub-match-rule":
                  #          permissions:
                  #          - and_rules:
                  #              rules:
                  #              - header: { name: ":method", exact_match: "GET" }
                  #              - header: { name: "User", exact_match: "sal" }
                  #              - url_path:
                  #                  path: { prefix: "/" }
                  #          principals:                 
                  #          - metadata:
                  #              filter: envoy.filters.http.jwt_authn
                  #              path:
                  #                - key: my_payload
                  #                - key: sub
                  #              value:
                  #                string_match:
                  #                  exact:  "testing@secure.istio.io"                            
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: keycloak
      connect_timeout: 0.25s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 5s
          interval_jitter: 1s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/auth/"
      load_assignment:
        cluster_name: keycloak
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 192.168.1.11
                      port_value: 8080

    - name: local_service
      connect_timeout: 0.25s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      health_checks:
        - timeout: 1s
          interval: 10s
          interval_jitter: 1s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/_/_/health/liveness"
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api
                      port_value: 8080
